Feat/user friendship (#50)
Add user service subsystems (auth, friends)
